# rolling-rag

./: .gitignore  README.md  config.py  pyproject.toml
core/: conv_indexer.py  embedding.py  router.py
examples/: basic_usage.py
prompts/: agent_default.md  agent_framework.md  agent_system.md  article_system.md  compress.md  constitution.md  conv_rolling.md  conv_rolling_unified.md  conv_segment.md  conv_summary.md  conv_synthesis.md  conv_unified.md  daily_log_system.md  identity.md  l1_extract.md  l1_extract_v2.md  l1_extract_v3.1.md  l1_extract_v3.2.md  l1_extract_v3.md  l1_extract_v5_backup.md  profile_fill.md  realtime_extract.md  registry.yaml  screen_l1_extract.md  screen_narrative.md  screen_narrative_user.md  screen_observation.md  screen_timeline.md  screen_timeline_l1.md  screen_timeline_user.md  影视飓风内容拉片.md  系统之美：决策者的系统思考.md
prompts/l2_modules/: base.md  context_template.md  fields.md  format.md  format_tools.md  origin.md  redlines.md  subject.md  types.md
prompts/modules/: base.txt  definitions.txt  examples.txt  format.txt  redlines.txt  subject.txt  think.txt
prompts/schemas/: conv_rolling_schema.json  conv_summary_schema.json  conv_synthesis_schema.json  conv_unified_schema.json  realtime_extract_schema.json
