[project]
name = "rolling-rag"
version = "0.1.0"
description = "Rolling RAG: From chaos to structure — rebuilding relationships in unstructured conversations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
full = [
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]
